--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -68,10 +68,10 @@
 
                             <div class="card-body">
                                 <h4 class="card-title">
-                                    <a href="#">{{ product.title}}</a>
+                                    <a href="#">{{ product.title|capfirst}}</a>
                                 </h4>
                                 <h5>{{ product.price }} руб.</h5>
-                                <p class="card-text">{{ product.text }}</p>
+                                <p class="card-text">{{ product.text|capfirst }}</p>
                             </div>
                             <div class="card-footer text-center">
                                 <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
