--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -59,25 +59,25 @@
                 <div class="row">
                     {% for product in products %}
                         <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="#">
-                                <img class="card-img-top"
-                                     src="{{ product.image }}"
-                                     alt="">
-                            </a>
+                            <div class="card h-100">
+                                <a href="#">
+                                    <img class="card-img-top"
+                                         src="/media/{{ product.image }}"
+                                         alt="">
+                                </a>
 
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">{{ product.title|capfirst}}</a>
-                                </h4>
-                                <h5>{{ product.price }} руб.</h5>
-                                <p class="card-text">{{ product.text|capfirst }}</p>
-                            </div>
-                            <div class="card-footer text-center">
-                                <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
+                                <div class="card-body">
+                                    <h4 class="card-title">
+                                        <a href="#">{{ product.name|capfirst }}</a>
+                                    </h4>
+                                    <h5>{{ product.price }} руб.</h5>
+                                    <p class="card-text">{{ product.description|capfirst }}</p>
+                                </div>
+                                <div class="card-footer text-center">
+                                    <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
+                                </div>
                             </div>
                         </div>
-                    </div>
                     {% endfor %}
                 </div>
 
