added profile template

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -3,7 +3,7 @@
     <div class="col-lg-5">
         {% if messages or form.errors %}
             <div class="alert
-             {% if messages %} alter-success {% else %} alert-warning {% endif %}
+             {% if messages %} alert-success {% else %} alert-warning {% endif %}
              alert-dismissible fade show" role="alert"
                  style="margin-top: 50px;">
                 {% if messages %}
