--- a/admins/templates/admins/admin-users-update-delete.html
+++ b/admins/templates/admins/admin-users-update-delete.html
@@ -5,9 +5,10 @@
         <div class="container-fluid">
             <h1 class="mt-4">Редактирование пользователя | {{ selected_user.username }}</h1>
             <div class="card-body">
-                <form action="{% url 'admins:admin_users_update' selected_user.id %}" method="post" enctype="multipart/form-data">
+                <form action="{% url 'admins:admin_users_update' selected_user.id %}" method="post"
+                      enctype="multipart/form-data">
                     {% csrf_token %}
-                     <div class="form-row">
+                    <div class="form-row">
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="{{ form.first_name.id_for_label }}">Имя</label>
@@ -50,7 +51,10 @@
                 </form>
                 <div class="row">
                     <div class="col-lg-12" style="margin-top: 33px;">
-                        <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                        <a href="{% url 'admins:admin_users_delete' selected_user.id %}"
+                           class="btn btn-danger btn-block">
+                            Удалить
+                        </a>
                     </div>
                 </div>
             </div>
