--- a/admins/templates/admins/admin-users-update-delete.html
+++ b/admins/templates/admins/admin-users-update-delete.html
@@ -3,9 +3,9 @@
 {% block content %}
     <main>
         <div class="container-fluid">
-            <h1 class="mt-4">Редактирование пользователя | {{ selected_user.username }}</h1>
+            <h1 class="mt-4">Редактирование пользователя | {{ user.username }}</h1>
             <div class="card-body">
-                <form action="{% url 'admins:admin_users_update' selected_user.id %}" method="post"
+                <form action="{% url 'admins:admin_users_update' user.id %}" method="post"
                       enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-row">
