--- a/admins/templates/admins/admin-users-update-delete.html
+++ b/admins/templates/admins/admin-users-update-delete.html
@@ -51,10 +51,10 @@
                 </form>
                 <div class="row">
                     <div class="col-lg-12" style="margin-top: 33px;">
-                        <a href="{% url 'admins:admin_users_delete' selected_user.id %}"
-                           class="btn btn-danger btn-block">
-                            Удалить
-                        </a>
+                      <form action="{% url 'admins:admin_users_delete' user.id %}" method="post">
+                    {% csrf_token %}
+                    <input type="submit" class="btn btn-danger btn-block" value="Удалить">
+                </form>
                     </div>
                 </div>
             </div>
